--- a/ssm_demo/.settings/org.eclipse.wst.common.component
+++ b/ssm_demo/.settings/org.eclipse.wst.common.component
@@ -5,8 +5,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/test"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/templates"/>
         <wb-resource deploy-path="/" source-path="/src/main/java/com/yihe/util"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="context-root" value="ssm_demo"/>
         <property name="java-output-path" value="/ssm_demo/target/classes"/>
     </wb-module>
