--- a/ssm_demo/src/main/webapp/bootstrap/css/bootstrap.css
+++ b/ssm_demo/src/main/webapp/bootstrap/css/bootstrap.css
@@ -1099,7 +1099,7 @@ input[type="reset"],
 input[type="button"],
 input[type="radio"],
 input[type="checkbox"] {
-  width: auto;
+ /*  width: auto; */
 }
 
 select,
